@@ -1073,10 +1073,13 @@ void recompute_channel_filter(MidiEvent *e)
 
 void init_voice_filter(int i)
 {
+  double gain;
   memset(&(voice[i].fc), 0, sizeof(FilterCoefficients));
   if(opt_lpf_def && voice[i].sample->cutoff_freq) {
 	  voice[i].fc.orig_freq = voice[i].sample->cutoff_freq;
 	  voice[i].fc.orig_reso_dB = (double)voice[i].sample->resonance / 10.0f;
+	  gain = pow(10.0f, -voice[i].fc.orig_reso_dB / 2.0f / 20.0f);
+	  voice[i].fc.scale = TIM_FSCALE(gain, 24);
 	  if(opt_lpf_def == 2 || opt_effect_quality >= 3) {voice[i].fc.type = 2;}
 	  else if(opt_lpf_def == 1) {voice[i].fc.type = 1;}
   } else {
